--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^32.0.0",
     "@ckeditor/ckeditor5-react": "^4.0.0",
+    "@emotion/react": "^11.7.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
@@ -19,6 +20,7 @@
     "react-router-dom": "^6.2.1",
     "react-rte": "^0.16.5",
     "react-scripts": "5.0.0",
+    "react-spinners": "^0.11.0",
     "react-toastify": "^8.2.0",
     "web-vitals": "^2.1.4"
   },
